# Docufy

./: .gitignore  README.md  pyproject.toml
backend/: main.py  recipes.py  recipes_api.py  settings.py  settings_api.py  sharepoint.py  watch.py  watch_api.py  webhook_api.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/auth/: msal.ts  useSharePointAuth.ts
frontend/src/components/: ConnectionsDialog.tsx  Controls.tsx  DocumentViewerDialog.tsx  Dropzone.tsx  Results.tsx  SharePointBrowserDialog.tsx  Toaster.tsx
frontend/src/components/PdfRegionSelector/: PdfRegionSelector.tsx  index.ts  types.ts
frontend/src/components/PdfRegionSelector/hooks/: useDragSelection.ts  useExtractRegion.ts  usePdfDocument.ts  usePdfRenderer.ts
frontend/src/components/PdfRegionSelector/ui/: PdfCanvas.tsx  ResultPanel.tsx  SelectionOverlay.tsx  Toolbar.tsx
frontend/src/components/connectors/: ImportConnectorsMenu.tsx
frontend/src/components/dpi/: DpiSettings.tsx  constants.ts  useDpi.ts
frontend/src/components/recipes/: RecipeManager.tsx
frontend/src/components/settings/: WatchFolderPanel.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/hooks/: useApiHealth.ts  useOcr.ts  useScreenshot.ts
frontend/src/lib/: api.ts  clarity.ts  ensurePdf.ts  prettyBytes.ts  recipes.ts  types.ts
frontend/src/provider/: ThemeContext.ts  ThemeProvider.tsx  useMediaQuery.ts
frontend/src/types/: connectors.ts
