[project]
name = "docufy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docufy-ocr>=0.1.7",
    "fastapi[standard]>=0.116.1",
    "msal>=1.33.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
